# handbook

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 01-onboarding.md
.github/workflows/: publish_github_pages.yml
assets/gestao-splor/: softwares-new.pptx
blog/: 20250319_live_code  index.html
blog/-análise-dos-diferentes-bancos-de-dados-publicados-da-receita-pública/: index.html
blog/-live-code---datamart---encontro-2025-03-06/: index.html
blog/-live-code---volumes-loa---encontro-2025-02-26/: index.html
blog/-live-code---volumes-loa---encontro-2025-03-10/: index.html
blog/-live-code---volumes-loa---encontro-2025-03-13/: index.html
blog/-live-code---volumes-loa---encontro-2025-03-17/: index.html
blog/-projeto-de-abertura-de-dados-de-orçamento-e-planejamento-de-minas-gerais---dados-abertos-mg/: index.html
blog/-publicação-das-bases-da-receita---análise-sobre-proteção-de-dados/: index.html
blog/-qlikview---menu-de-agregação-de-valores-dinâmico/: index.html
blog/-sqlalchemy-uma-ferramenta-essencial-para-manipulação-de-dados-em-python/: index.html
blog/-tutorial-criação-e-registro-de-decreto-no-grp/: index.html
blog/1º-treinamento-dcppn/: index.html
blog/banco-de-dados-e-diagrama-entidade-relacionamento-um-guia-prático/: index.html
blog/como-transcrever-um-vídeo-usando-o-turboscribe/: index.html
diretorias/: index.html
docs/: index.md
faq/: index.html
gestao_splor/: index.html
linha_do_tempo/: index.html
search/: search_index.json
tags/: index.html
(+170 files in other folders)
