[project]
name = "handbook"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Dornas",email = "gabrielbdornas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mike (>=2.1.3,<3.0.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.3.0,<2.0.0)",
    "mkdocs-material (>=9.6.5,<10.0.0)",
    "mkdocs-video (>=1.5.0,<2.0.0)",
    "pymdown-extensions (>=10.14.3,<11.0.0)",
    "tzdata (>=2025.1,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
